The code fully implements the Phase 12 requirements (Advanced Search and Reporting) using exclusively the existing controllers, services, and repositories without altering external contracts or database schema. By updating SupplierOrderServiceTest.java  and DashboardServiceTest.java  to align with the new signatures, we’ve ensured all changes are fully tested, backward-compatible, and stable for a merge.